add js file and new line

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
 <body>
     <h1>Hello git</h1>  
     <h2>hello class!</h2>
+    <h3>Hello world</h3>
+
+    <script src="main.js"></script>
 </body>
 </html>
